# trail-running-data-pipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: ingestion.py
src/trail_pipeline/: __init__.py  ingestion.py  logger.py  transform.py
trail_pipeline/: ingestion.py  transform.py
