[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "trail-running-data-pipeline"
version = "0.0.1"
description = "Project to analyse trail running metrics"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license-files = ["LICENSE"]
authors = [
    {name = "Alexandre COSTE", email = "coste.alexandre09@gmail.com"},
]

[tool.setuptools]
package-dir = {"" = "src"}

